--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=devopstrainingblr@gmail.com
+email=kmachendra025@gmail.com
 #always-auth=true
-_auth=YWRtaW46YWRtaW4xMjM=
+_auth=YWRtaW46TWFjaGkkMTIzNDU=
 allowRepublish=true
