--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=kmachendra025@gmail.com
+email=kurubamachendrappa025@gmail.com
 #always-auth=true
 _auth=YWRtaW46TWFjaGkkMTIzNDU=
 allowRepublish=true
