--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-email=kmachendrappa025@gmail.com
+email=kurubamachendrappa025@gmail.com
 #always-auth=true
-_auth=YWRtaW46TWFjaGkkMTIzNDU=
+#_auth=YWRtaW46TWFjaGkkMTIzNDU=
+_auth=YWRtaW46bWFjaGkkMTIzNDU=
 allowRepublish=true
