--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-email=kurubamachendrappa025@gmail.com
+email=vk1432073@gmail.com
 #always-auth=true
-#_auth=YWRtaW46TWFjaGkkMTIzNDU=
-_auth=YWRtaW46bWFjaGkkMTIzNDU=
+_auth=YWRtaW46VmlqYXlAMTIzNDU=
 allowRepublish=true
