--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=vk1432073@gmail.com
+email=kurubamachendrappa025@gmail.com
 #always-auth=true
 _auth=YWRtaW46VmlqYXlAMTIzNDU=
 allowRepublish=true
