--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=kurubamachendrappa025@gmail.com
+email=vk1432073@gmail.com
 #always-auth=true
-_auth=YWRtaW46VmlqYXlAMTIzNDU=
+_auth=YWRtaW46dmlqYXlAMTIzNDU=
 allowRepublish=true
